--- a/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
+++ b/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
@@ -35,6 +35,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Categoria"/>
               </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuCategoriaMousePressed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuLibro">
               <Properties>
