--- a/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
+++ b/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
@@ -43,6 +43,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Libro"/>
               </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuLibroMousePressed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuAutor">
               <Properties>
