--- a/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
+++ b/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
@@ -62,6 +62,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Reportes"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="menuReporteNoParametrizado">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="No Parametrizado"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuReporteNoParametrizadoActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
       </SubComponents>
     </Menu>
