--- a/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
+++ b/ParcialPractico2_DAUTE/src/com/vistas/Menu.form
@@ -62,6 +62,10 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Reportes"/>
           </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuReportesMousePressed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuReportesActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="menuReporteNoParametrizado">
               <Properties>
@@ -69,6 +73,14 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuReporteNoParametrizadoActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="menuReporteParametrizado">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Parametrizado"/>
+              </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuReporteParametrizadoMousePressed"/>
               </Events>
             </MenuItem>
           </SubComponents>
